--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "typescript": "~5.9.3",
-        "vite": "^7.2.4"
+        "vite": "^7.2.4",
+        "vite-tsconfig-paths": "^6.0.3"
     }
 }
