--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview"
+        "dev": "npm-run-all --parallel vite typesafe-i18n",
+        "vite": "vite",
+        "typesafe-i18n": "typesafe-i18n",
+        "build": "typesafe-i18n && vite build"
     },
     "devDependencies": {
+        "npm-run-all": "^4.1.5",
+        "sass": "^1.97.1",
         "typescript": "~5.9.3",
         "vite": "^7.2.4",
         "vite-tsconfig-paths": "^6.0.3"
+    },
+    "dependencies": {
+        "typesafe-i18n": "^5.26.2"
     }
 }
